--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        ITFlashLightkeystore {
+            keyAlias 'ITFlashlightalias'
+            storeFile file('C:/Users/Dev/Documents/ITFlashLight KeyStore/keystore/keystore')
+        }
+    }
     compileSdkVersion 19
     buildToolsVersion "21.1.2"
-
     defaultConfig {
         applicationId "io.internetthings.flashlight"
         minSdkVersion 11
         targetSdkVersion 18
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            signingConfig signingConfigs.ITFlashLightkeystore
         }
     }
 }
