--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ android {
         applicationId "io.internetthings.flashlight"
         minSdkVersion 11
         targetSdkVersion 18
+        versionCode 6
+        versionName "1.1"
     }
     buildTypes {
         release {
